crates/sui-prover/tests/snapshots/spec_well_formed/spec_well_formed_return_types.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
snapshot_kind: text
---
exiting with bytecode transformation errors
warning: unused variable
  ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_types.move:6:16
  │
6 │ public fun foo(x: u128): u128 {
  │                ^ Unused parameter 'x'. Consider removing or prefixing with an underscore: '_x'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error: Spec function have differ return types than underlying func
   ┌─ tests/inputs/spec_well_formed/spec_well_formed_return_types.move:12:1
   │  
12 │ ╭ public fun foo_spec(x: u128): u64 {
13 │ │   foo(x);
14 │ │   ensures(true);
15 │ │ 
16 │ │   5u64
17 │ │ }
   │ ╰─^
